force-app/main/default/objects/IMCC_API_Synchronization_Item__c/IMCC_API_Synchronization_Item__c.object-meta.xml
<CustomObject>
    <description>IMCC: object will contain actual information of sync status of account and contact.</description>
    <label>IMCC API Synchronization Item</label>
    <nameField>
        <displayFormat>IMCCASI-{0000}</displayFormat>
        <label>IMCC API Synchronization Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IMCC API Synchronization Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>