force-app/main/default/objects/IMCC_API_Synchronization_Item__c/fields/API_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Call_Type__c</fullName>
    <description>Type of action which will API callout perform in the external system.</description>
    <label>API Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>