force-app/main/default/objects/IMCC_API_Synchronization_Item__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asset from where Item Created.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>IMCC API Synchronization Items</relationshipLabel>
    <relationshipName>IMCC_API_Synchronization_Items</relationshipName>
    <type>Lookup</type>
</CustomField>