force-app/main/default/objects/IMCC_API_Synchronization_Item__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Edition</description>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>IMCC API Synchronization Items</relationshipLabel>
    <relationshipName>IMCC_API_Synchronization_Items</relationshipName>
    <type>Lookup</type>
</CustomField>