force-app/main/default/objects/IMCC_API_Synchronization_Item__c/fields/IMCC_API_Synchronization_Transaction__c.field-meta.xml
<CustomField>
    <fullName>IMCC_API_Synchronization_Transaction__c</fullName>
    <description>IMCC API Synchronization Transaction</description>
    <label>IMCC API Synchronization Transaction</label>
    <referenceTo>IMCC_API_Synchronization_Transaction__c</referenceTo>
    <relationshipLabel>IMCC API Synchronization Items</relationshipLabel>
    <relationshipName>IMCC_API_Synchronization_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>