force-app/main/default/objects/IMCC_API_Synchronization_Item__c/fields/Old_Data__c.field-meta.xml
<CustomField>
    <fullName>Old_Data__c</fullName>
    <description>Old Record Data</description>
    <label>Old Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>