force-app/main/default/objects/IMCC_API_Synchronization_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>IMCC API Synchronization Item Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>